log
Fri 10 Mar 2023 12:08:25 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
9acb3a8
Fri 10 Mar 2023 12:15:44 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9c60432
Fri 10 Mar 2023 12:18:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:76:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   76 |    return *vector;
      |           ^~~~~~~
exercises.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
351d76d
Fri 10 Mar 2023 12:18:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
aed26fd
